--- a/index.html
+++ b/index.html
@@ -234,12 +234,8 @@
         <div class="row footer__row">
             <a href="#" class="footer__anchor">
                 <figure class="footer__logo">
-                    <img src="./assets/logo.svg" class="footer__logo--img" alt="Personal logo">
+                    <i class="fas fa-angle-up"></i>
                 </figure>
-                <span class="footer__logo--popper">
-                    Top
-                    <i class="fas fa-arrow-up"></i>
-                </span>
             </a>
             <div class="footer__social--list">
                 <a href="https://github.com/jack-white9/" target="_blank" class="
