Added FindMovies project

--- a/index.html
+++ b/index.html
@@ -203,23 +203,23 @@
               <li class="project">
                 <div class="project__wrapper">
                   <img
-                    src="./assets/dashboard.png"
-                    alt="COVID-19 dashboard project"
+                    src="./assets/findMovies.png"
+                    alt="FindMovies"
                     class="project__img"
                   />
                   <div class="project__description">
-                    <h3 class="project__description--title">COVID-19 dashboard project</h3>
+                    <h3 class="project__description--title">FindMovies</h3>
                     <h4 class="project__description--sub-title">
-                      HTML, CSS, R
+                      React, JavaScript, HTML5, CSS3
                     </h4>
                     <p class="project__description--para">
-                      A COVID-19 dashboard that provides global statistics showing the trends of the virus. Displays total cases, total active cases, and total deaths across the globe to the user in a concise and understandable format.
+                      FindMovies is a movie database web application created with React. Users can search movies and find information about them, such as release date, budget, box office, and more. 
                     </p>
                     <div class="project__description--links">
-                        <a href="https://github.com/jack-white9/coronavirus-dashboard" target="_blank" class="project__description--link">
+                        <a href="https://github.com/jack-white9/findmovies" target="_blank" class="project__description--link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://jack-white9.github.io/coronavirus-dashboard/" target="_blank" class="project__description--link">
+                        <a href="https://jack-white9.github.io/findmovies/" target="_blank" class="project__description--link">
                           <i class="fas fa-link"></i>
                       </a>
                     </div>
