--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
               <img
-                src="./assets/me2.jpeg"
+                src="./assets/me.jpeg"
                 class="about-me__picture"
                 alt="Jack White"
               />
