--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   class="project__img"
                 />
                 <div class="project__description">
-                  <h3 class="project__description--title">FindMovies</h3>
+                  <h3 class="project__description--title">FindMovies (Movie Database)</h3>
                   <h4 class="project__description--sub-title">
                     React, JavaScript, HTML5, CSS3
                   </h4>
@@ -177,23 +177,23 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/language-endangerment.png"
-                  alt="Language endangerment project"
+                  src="./assets/fireside.png"
+                  alt="Fireside - Chat app project"
                   class="project__img"
                 />
                 <div class="project__description">
-                  <h3 class="project__description--title">Language endangerment project</h3>
+                  <h3 class="project__description--title">Fireside (Chat App)</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JavaScript, Vega Lite
+                    React, Firebase, JavaScript, HTML5, CSS3
                   </h4>
                   <p class="project__description--para">
-                    A project showcasing the impacts of language endangerment globally. Utilises a JavaScript package called Vega Lite to depict insightful data visualisations that provide a concise summary of the varying levels of endangerment worldwide.
+                    Fireside is an online chat web application created with React and Firebase. After authentication using their Google account, users can send and receive messages to others on the platform.
                   </p>
                   <div class="project__description--links">
-                      <a href="https://github.com/jack-white9/endangered-languages" target="_blank" class="project__description--link">
+                      <a href="https://github.com/jack-white9/fireside-chat-app" target="_blank" class="project__description--link">
                           <i class="fab fa-github"></i>
                       </a>
-                      <a href="https://jack-white9.github.io/endangered-languages/" target="_blank" class="project__description--link">
+                      <a href="https://jack-white9.github.io/fireside-chat-app/" target="_blank" class="project__description--link">
                         <i class="fas fa-link"></i>
                     </a>
                   </div>
@@ -203,23 +203,23 @@
             <li class="project">
                 <div class="project__wrapper">
                   <img
-                    src="./assets/to-do.png"
-                    alt="To-do project"
+                    src="./assets/eco-store.png"
+                    alt="E-commerce project"
                     class="project__img"
                   />
                   <div class="project__description">
-                    <h3 class="project__description--title">To-do project</h3>
+                    <h3 class="project__description--title">Eco-store (e-Commerce App)</h3>
                     <h4 class="project__description--sub-title">
-                      HTML, CSS, JavaScript
+                      React, JavaScript, HTML5, CSS3
                     </h4>
                     <p class="project__description--para">
-                      A to-do app built with HTML, CSSS, and JavaScript. Users can create, read, update, and delete tasks, making this project a fully-functional CRUD application.
+                      Eco-Store is an e-commerce web application created with React. Users can explore a range of products fetched from a fake store API and add them to their shopping cart. The project features a responsive design that works seamlessly for users of all screen sizes, including desktop users, tablet users, and mobile users.
                     </p>
                     <div class="project__description--links">
-                        <a href="https://github.com/jack-white9/to-do-app" target="_blank" class="project__description--link">
+                        <a href="https://github.com/jack-white9/ecommerce-app" target="_blank" class="project__description--link">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://jack-white9.github.io/to-do-app/" target="_blank" class="project__description--link">
+                        <a href="https://eco-store-ecommerce-app.herokuapp.com/ecommerce-app/" target="_blank" class="project__description--link">
                           <i class="fas fa-link"></i>
                       </a>
                     </div>
