Updated tech stack

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               Hey! I'm <span class="text--purple">Jack White</span>&nbsp;<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
-              I'm a
-              <strong class="text--purple">frontend software engineer</strong>
+              I'm currently working as a 
+              <strong class="text--purple">full stack software engineer</strong>
               with a passion for building beautiful and responsive web
               applications with great user experiences.
             </p>
@@ -94,9 +94,49 @@
       <div class="container">
         <div class="row">
           <h1 class="section__title">
-            This is my <span class="text--purple">technology stack</span>
+            Currently addicted to these <span class="text--purple">technologies</span>
           </h1>
           <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt="React Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">React</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="assets/typescript-icon.png"
+                  alt="Typescript Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">TypeScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                  alt="JavaSript Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="assets/nodejs-icon.svg"
+                  alt="NodeJS Logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">NodeJS</span>
+            </div>
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
@@ -120,22 +160,22 @@
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
-                  alt="JavaSript Logo"
+                  src="assets/postgres-icon.svg"
+                  alt="PostgreSQL Logo"
                   class="language__img"
                 />
               </figure>
-              <span class="language__name">JavaScript</span>
+              <span class="language__name">PostgreSQL</span>
             </div>
             <div class="language">
               <figure class="language__img--wrapper">
                 <img
-                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
-                  alt="React Logo"
+                  src="assets/aws-icon.png"
+                  alt="AWS Logo"
                   class="language__img"
                 />
               </figure>
-              <span class="language__name">React</span>
+              <span class="language__name">AWS</span>
             </div>
           </div>
         </div>
@@ -259,7 +299,7 @@
                     link__hover-effect--white
                 ">Resume</a>
             </div>
-            <div class="footer__copyright">Copyright © 2021 Jack White</div>
+            <div class="footer__copyright">Copyright © 2022 Jack White</div>
         </div>
     </footer>
   </body>
