Updated tech stack h1

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="container">
         <div class="row">
           <h1 class="section__title">
-            Currently addicted to these <span class="text--purple">technologies</span>
+            Currently working with these <span class="text--purple">technologies</span>
           </h1>
           <div class="language__list">
             <div class="language">
